ECompEditor: Typing end time messes up start time
this is 3.34.3 (3.34.3-1.fc31)
In the Calendar, in any event edit (incl in new events), when I edit the end time, the start time changes to some other time, often 00:00 or 00:30. I cannot identify the pattern yet.
This behaviour does not depend on whether the calendar is stored locally or in a cloud.
Edited by Milan Crha