I#760 - ECompEditor: Typing end time messes up start time

Closes https://gitlab.gnome.org/GNOME/evolution/issues/760